--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ backcall==0.2.0
 beautifulsoup4==4.11.1
 bleach==5.0.1
 blinker==1.5
-Bottleneck @ file:///C:/Windows/Temp/abs_3198ca53-903d-42fd-87b4-03e6d03a8381yfwsuve8/croots/recipe/bottleneck_1657175565403/work
+Bottleneck==1.3.5
 brotlipy==0.7.0
 cachetools==5.2.0
 certifi==2022.6.15
@@ -16,8 +16,8 @@ charset-normalizer==2.1.0
 click==8.1.3
 colorama==0.4.5
 commonmark==0.9.1
-cryptography @ file:///C:/ci/cryptography_1652101729823/work
-cycler @ file:///tmp/build/80754af9/cycler_1637851556182/work
+cryptography==37.0.1
+cycler==0.11.0
 debugpy==1.6.2
 decorator==5.1.1
 defusedxml==0.7.1
@@ -25,7 +25,7 @@ entrypoints==0.4
 executing==0.8.3
 fastjsonschema==2.16.1
 fonttools==4.25.0
-future @ file:///C:/ci_310/future_1642081234309/work
+future==0.18.2
 gitdb==4.0.9
 GitPython==3.1.27
 idna==3.3
@@ -36,19 +36,19 @@ ipython-genutils==0.2.0
 ipywidgets==7.7.1
 jedi==0.18.1
 Jinja2==3.1.2
-joblib @ file:///tmp/build/80754af9/joblib_1635411271373/work
+joblib==1.1.0
 jsonschema==4.7.2
 jupyter-client==7.3.4
 jupyter-core==4.11.1
 jupyterlab-pygments==0.2.2
 jupyterlab-widgets==1.1.1
-kiwisolver @ file:///C:/ci/kiwisolver_1653292359073/work
+kiwisolver==1.4.2
 MarkupSafe==2.1.1
-matplotlib @ file:///C:/ci/matplotlib-suite_1647423638658/work
+matplotlib==3.5.1
 matplotlib-inline==0.1.3
 mistune==0.8.4
 mkl-fft==1.3.1
-mkl-random @ file:///C:/ci_310/mkl_random_1643050563308/work
+mkl-random==1.2.2
 mkl-service==2.4.0
 munkres==1.1.4
 nbclient==0.6.6
@@ -56,7 +56,7 @@ nbconvert==6.5.0
 nbformat==5.4.0
 nest-asyncio==1.5.5
 notebook==6.4.12
-numexpr @ file:///C:/Windows/Temp/abs_e2036a32-9fe9-47f3-a04c-dbb1c232ba4b334exiur/croots/recipe/numexpr_1656940304835/work
+numexpr==2.8.3
 numpy==1.23.1
 packaging==21.3
 pandas==1.4.3
@@ -64,6 +64,7 @@ pandocfilters==1.5.0
 parso==0.8.3
 pickleshare==0.7.5
 Pillow==9.2.0
+pip==22.1.2
 prometheus-client==0.14.1
 prompt-toolkit==3.0.30
 protobuf==3.20.1
@@ -74,10 +75,10 @@ pycparser==2.21
 pydeck==0.7.1
 Pygments==2.12.0
 Pympler==1.0.1
-pyOpenSSL @ file:///opt/conda/conda-bld/pyopenssl_1643788558760/work
+pyOpenSSL==22.0.0
 pyparsing==3.0.9
 pyrsistent==0.18.1
-PySocks @ file:///C:/ci_310/pysocks_1642089375450/work
+PySocks==1.7.1
 python-dateutil==2.8.2
 pytz==2022.1
 pytz-deprecation-shim==0.1.0.post0
@@ -87,11 +88,12 @@ PyYAML==6.0
 pyzmq==23.2.0
 requests==2.28.1
 rich==12.5.1
-scikit-learn @ file:///C:/ci/scikit-learn_1658326204305/work
-scipy @ file:///C:/ci_310/scipy_1642247684282/work
-seaborn @ file:///tmp/build/80754af9/seaborn_1629307859561/work
+scikit-learn==1.1.1
+scipy==1.7.3
+seaborn==0.11.2
 semver==2.13.0
 Send2Trash==1.8.0
+setuptools==61.2.0
 sip==4.19.13
 six==1.16.0
 smmap==5.0.0
@@ -99,8 +101,8 @@ soupsieve==2.3.2.post1
 stack-data==0.3.0
 streamlit==1.11.0
 terminado==0.15.0
-testpath @ file:///C:/Windows/TEMP/abs_23c7fa33-cbb9-46dc-b7c5-590c38e2de3d4bmbngal/croots/recipe/testpath_1655908553202/work
-threadpoolctl @ file:///Users/ktietz/demo/mc3/conda-bld/threadpoolctl_1629802263681/work
+testpath==0.6.0
+threadpoolctl==2.2.0
 tinycss2==1.1.1
 toml==0.10.2
 toolz==0.12.0
@@ -114,7 +116,8 @@ validators==0.20.0
 watchdog==2.1.9
 wcwidth==0.2.5
 webencodings==0.5.1
+wheel==0.37.1
 widgetsnbextension==3.6.1
-win-inet-pton @ file:///C:/ci_310/win_inet_pton_1642658466512/work
+win-inet-pton==1.1.0
 wincertstore==0.2
 zipp==3.8.1
